<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Adblock Plus</string>
  <string name="crash_name">Crash occurred</string>
  <string name="configuration_name">Configuration information</string>
  <string name="proxysettings_name">Proxy configuration</string>
  <string name="install_name">Adblock Plus has been installed</string>
  <string name="acceptableads_name">Acceptable Ads in Adblock Plus</string>
  
  <string name="notif_wifi">Ads are blocked on WiFi connection</string>
  <string name="notif_wifi_nofiltering">Allowing ads on WiFi connection</string>
  <string name="notif_all">Ads are blocked on all connections</string>
  <string name="notif_waiting">Waiting for traffic on port %d</string>
  <string name="notif_notraffic">You probably need to adjust configuration</string>

  <string name="crash_dialog_text">It seems that the application encountered a problem and was forcefully stopped on previous launch. You can help us fix this if you send us error report by clicking \'OK\'.</string>
  <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>

  <string name="msg_crash_submission_failure">Failed to submit crash report, will try again later.</string>
  <string name="msg_subscription_offer">A subscription has been selected based on your language: \'%s\'. &lt;a&gt;Acceptable Ads&lt;/a&gt; have been enabled. You can change this in the settings.</string>
  <string name="msg_acceptable_ads">Adblock Plus now supports &lt;a&gt;Acceptable Ads&lt;/a&gt;, and has automatically enabled them. You can disable them in the settings.</string>
  <string name="msg_notraffic">It seems that no traffic is passing through application.</string>
  <string name="msg_configuration">Adblock Plus can not change the proxy settings on your device, please configure it manually.</string>
  <string name="msg_badport">Bad port value</string>
  <string name="msg_clipboard">Text has been copied to clipboard</string>
  <string name="msg_update_available">New update available</string>
  <string name="msg_update_missing">You are running the latest version</string>
  <string name="msg_update_description">New update is available for download. Proceed?</string>
  <string name="msg_update_downloading">Downloading update: %d%%</string>
  <string name="msg_update_ready">Ready to install update</string>
  <string name="msg_update_fail">Failed to check for updates, will try again later</string>
  <string name="msg_hideicon_warning">&lt;b&gt;Please note&lt;/b&gt;: The best we can do is make the icon invisible. If we remove the icon, Android could stop Adblock Plus any time, which will result in loss of connectivity.</string>
  <string name="msg_hideicon_native">You can &lt;b&gt;completely disable&lt;/b&gt; notification icon through Android settings. For this uncheck &lt;i&gt;Show notifications&lt;/i&gt; check box in &lt;i&gt;Application info&lt;/i&gt;. Press &lt;i&gt;Show me&lt;/i&gt; to open it now.</string>

  <string name="configuring_url">https://adblockplus.org/en/android-config</string>
  <string name="configuring_proxy_url">https://adblockplus.org/en/android-config#proxy</string>

  <string name="ok">OK</string>
  <string name="finish" translatable="false">Finish</string>
  <string name="cancel">Cancel</string>
  <string name="error">Error</string>
  <string name="warning">Warning</string>
  <string name="about">About</string>
  <string name="help">Help</string>
  <string name="version">Version</string>
  <string name="build">build#</string>
  <string name="gotit">Got it</string>
  <string name="showme">Show me</string>
  <string name="configure">Configure</string>
  <string name="opensettings">Open wireless settings</string>

  <string name="synchronize_in_progress">downloading&#8230;</string>
  <string name="synchronize_invalid_url">invalid url</string>
  <string name="synchronize_connection_error">connection error</string>
  <string name="synchronize_invalid_data">invalid data</string>
  <string name="synchronize_checksum_mismatch">checksum mismatch</string>
  <string name="synchronize_last_at">last update</string>
  <string name="synchronize_never">not loaded</string>

  <string name="pref_enabled_title">Filtering</string>
  <string name="pref_enabled_summary_on">Adblock filtering is enabled</string>
  <string name="pref_enabled_summary_off">Adblock filtering is disabled</string>
  <string name="pref_proxyenabled_title">Proxy</string>
  <string name="pref_proxyenabled_summary_on">Adblock proxy is enabled</string>
  <string name="pref_proxyenabled_summary_off">Adblock proxy is disabled</string>
  <string name="pref_acceptableads_title">Acceptable Ads</string>
  <string name="pref_acceptableads_summary_on">Allow some non-intrusive advertising</string>
  <string name="pref_acceptableads_summary_off">Block all advertising</string>
  <string name="pref_startatboot_title">Start at boot</string>
  <string name="pref_startatboot_summary_on">Adblock Plus will start in background automatically if it is enabled</string>
  <string name="pref_startatboot_summary_off">Adblock Plus needs to be started manually after boot</string>
  <string name="pref_subscription_title">Filter subscription</string>
  <string name="pref_refresh_title">Subscription refresh</string>
  <string name="pref_wifirefresh_title">Refresh over WiFi only</string>
  <string name="pref_wifirefresh_summary_on">Automatic refreshes will be performed only over WiFi connections</string>
  <string name="pref_wifirefresh_summary_off">Automatic refreshes will be performed over any connection</string>
  <string name="pref_hideicon_title">Hide icon</string>
  <string name="pref_hideicon_summary_on">Transparent notification icon is used to reduce annoyance</string>
  <string name="pref_hideicon_summary_off">Normal notification icon is used</string>
  <string name="pref_advanced_title">Advanced settings</string>
  <string name="pref_proxy_title">Proxy</string>
  <string name="pref_proxyhost_title">Host</string>
  <string name="pref_proxyport_title">Port</string>
  <string name="pref_proxyuser_title">User</string>
  <string name="pref_proxypass_title">Password</string>
  <string name="pref_support_title">Support</string>
  <string name="pref_crashreport_title">Crash report</string>
  <string name="pref_crashreport_summary_on">Application will generate report if crashed and will ask to send it on next start</string>
  <string name="pref_crashreport_summary_off">Report will not be generated on application crash</string>
  <string name="pref_checkupdate_title">Check for update</string>
  <string name="pref_configuration_title">Show configuration</string>
  <string name="menu_advanced">Advanced settings</string>
  <string name="menu_ref_script" translatable="false">Refresh Script</string>
</resources>
