<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_enabled"
        android:summaryOff="@string/pref_enabled_summary_off"
        android:summaryOn="@string/pref_enabled_summary_on"
        android:title="@string/pref_enabled_title" />

    <org.adblockplus.android.activity.preference.RefreshableListPreference
        android:key="@string/pref_subscription"
        android:title="@string/pref_subscription_title" />

    <org.adblockplus.android.activity.preference.HelpfulCheckBoxPreference
        android:key="@string/pref_acceptableads"
        android:summaryOff="@string/pref_acceptableads_summary_off"
        android:summaryOn="@string/pref_acceptableads_summary_on"
        android:title="@string/pref_acceptableads_title" />

    <CheckBoxPreference
        android:key="@string/pref_hideicon"
        android:summaryOff="@string/pref_hideicon_summary_off"
        android:summaryOn="@string/pref_hideicon_summary_on"
        android:title="@string/pref_hideicon_title" />

</PreferenceScreen>